HW06 implements JspMealController

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -2,6 +2,7 @@ app.title=Подсчет калорий
 app.home=Главная
 app.footer=Приложение стажировки <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
 app.login=Зайти как
+
 user.title=Пользователи
 user.name=Имя
 user.email=Почта
@@ -9,4 +10,21 @@ user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
 meal.title=Моя еда
+
 common.select=Выбрать
+
+meal.add=Добавить еду
+meal.create=Создать
+meal.edit=Редактировать
+meal.save=Сохранить
+meal.canсel=Отменить
+meal.filter=Фильтровать
+meal.update=Обновить
+meal.delete=Удалить
+meal.dateTime=Дата и время
+meal.description=Описание
+meal.calories=Калории
+meal.fromDate=От даты
+meal.toDate=До даты
+meal.fromTime=От времени
+meal.toTime=До времени
