HW10_add_date/time_duplicate_error_handling

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -45,4 +45,5 @@ common.confirm=Вы уверены?
 common.save=Сохранить
 common.cancel=Отменить
 
-exception.user.duplicateEmail=пользователь с такой почтой уже существует
+exception.user.duplicateEmail=Пользователь с такой почтой уже существует
+exception.meal.duplicateEmail=У вас уже есть еда с такой датой/временем
